security.tf
resource "aws_security_group" "my_sg" {
  name        = "my_sg"
  description = "Allow tcp inbound traffic"
  vpc_id      = aws_vpc.my_vpc.id

  ingress {
    description      = "tcp from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }
   ingress {
    description      = "ssh from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  tags = {
    Name = "my_sg"
  }
}
